# micro_apple

./: .gitignore  readme.md
micro_apple/: Cargo.toml  Embed.toml
micro_apple/.cargo/: config.toml
micro_apple/src/: main.rs
micro_apple_build/: Cargo.toml
micro_apple_build/src/: lib.rs  main.rs
