[package]
name = "micro_apple"
version = "0.1.0"
edition = "2021"

# [build-dependencies]
# build-rs = "0.1.2"
# micro_apple_build = { path = "../micro_apple_build" }

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "0.3.9"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
panic-halt = "1.0.0"
ringbuffer = { version = "0.15.0", default-features = false }
